// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create, Rename and Delete Forms Create List 1`] = `
<body>
  <div>
    <main
      class="css-1yfhmvi"
    >
      <div
        class="css-1qehna1"
      >
        <form
          class="css-0"
        >
          <p
            class="css-0"
          >
            <label
              class="css-w4k18f"
            >
              Имя списка
            </label>
            <input
              class="css-ga4orh"
              placeholder="Новый список"
              type="text"
              value="23"
            />
          </p>
          <div
            class="css-alwjd5"
          >
            <button
              class="css-i6gg3r"
              title="Отмена"
            >
              Отмена
            </button>
            <button
              class="css-er65dn"
              title="Создать"
              type="submit"
            >
              Создать
            </button>
          </div>
        </form>
      </div>
    </main>
  </div>
</body>
`;

exports[`Create, Rename and Delete Forms Delete List 1`] = `
<body>
  <div>
    <main
      class="css-1yfhmvi"
    >
      <div
        class="css-1qehna1"
      >
        <form
          class="css-0"
        >
          <p
            class="css-0"
          >
            <label
              class="css-w4k18f"
            >
              Удалить список ?
            </label>
          </p>
          <div
            class="css-alwjd5"
          >
            <button
              class="css-i6gg3r"
              title="Отмена"
            >
              Отмена
            </button>
            <button
              class="css-er65dn"
              title="OK"
              type="submit"
            >
              OK
            </button>
          </div>
        </form>
      </div>
    </main>
  </div>
</body>
`;

exports[`Create, Rename and Delete Forms Rename List 1`] = `
<body>
  <div>
    <main
      class="css-1yfhmvi"
    >
      <div
        class="css-1qehna1"
      >
        <form
          class="css-0"
        >
          <p
            class="css-0"
          >
            <label
              class="css-w4k18f"
            >
              Имя списка
            </label>
            <input
              class="css-ga4orh"
              placeholder="Новый список"
              type="text"
              value="Первый список"
            />
          </p>
          <div
            class="css-alwjd5"
          >
            <button
              class="css-i6gg3r"
              title="Отмена"
            >
              Отмена
            </button>
            <button
              class="css-er65dn"
              title="OK"
              type="submit"
            >
              OK
            </button>
          </div>
        </form>
      </div>
    </main>
  </div>
</body>
`;
